--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="day17.js"></script>
   <title>Edabit JavaScript Challenges</title>
 </head>
 <body>
