--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" src="script.js"></script>
   <script type="text/javascript" src="day17.js"></script>
+  <script type="text/javascript" src="day20.js"></script>
   <title>Edabit JavaScript Challenges</title>
 </head>
 <body>
