1st challenge for 29th july

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="script.js"></script>
   <script type="text/javascript" src="day17.js"></script>
   <script type="text/javascript" src="day20.js"></script>
+  <script type="text/javascript" src="day29.js"></script>
   <title>Edabit JavaScript Challenges</title>
 </head>
 <body>
