edabit challenge on conversion of array to strings

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="script.js"></script>
-  <script type="text/javascript" src="day17.js"></script>
-  <script type="text/javascript" src="day20.js"></script>
-  <script type="text/javascript" src="day29.js"></script>
   <title>Edabit JavaScript Challenges</title>
 </head>
 <body>
   This is JavaScript Challenges from edabit.com 
 
+  <script type="text/javascript" src="edabitChallenge2.js"></script>
+  <!-- <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="day17.js"></script>
+  <script type="text/javascript" src="day20.js"></script>
+  <script type="text/javascript" src="day29.js"></script> -->
 </body>
 </html>
