--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   This is JavaScript Challenges from edabit.com 
 
   <script type="text/javascript" src="edabitChallenge2.js"></script>
+  <script type="text/javascript" src="edabitChallenge1.js"></script>
   <!-- <script type="text/javascript" src="script.js"></script>
   <script type="text/javascript" src="day17.js"></script>
   <script type="text/javascript" src="day20.js"></script>
