A function that convert age to days

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
   This is JavaScript Challenges from edabit.com 
 
-  <script type="text/javascript" src="edabitChallenge2.js"></script>
-  <script type="text/javascript" src="edabitChallenge1.js"></script>
+  <script type="text/javascript" src="edabitChallenge3.js"></script>
+  <!-- <script type="text/javascript" src="edabitChallenge2.js"></script>
+  <script type="text/javascript" src="edabitChallenge1.js"></script> -->
   <!-- <script type="text/javascript" src="script.js"></script>
   <script type="text/javascript" src="day17.js"></script>
   <script type="text/javascript" src="day20.js"></script>
