--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <script type="text/javascript" src="edabitChallenge3.js"></script>
   <script type="text/javascript" src="edabitChallenge4.js"></script>
+  <script type="text/javascript" src="edabitChallenge5.js"></script>
   <!-- <script type="text/javascript" src="edabitChallenge2.js"></script>
   <script type="text/javascript" src="edabitChallenge1.js"></script> -->
   <!-- <script type="text/javascript" src="script.js"></script>
