function that check for numbers divisible by 5

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="edabitChallenge3.js"></script>
   <script type="text/javascript" src="edabitChallenge4.js"></script>
   <script type="text/javascript" src="edabitChallenge5.js"></script>
+  <script type="text/javascript" src="edabitChallenge6.js"></script>
   <!-- <script type="text/javascript" src="edabitChallenge2.js"></script>
   <script type="text/javascript" src="edabitChallenge1.js"></script> -->
   <!-- <script type="text/javascript" src="script.js"></script>
